namespace TheQuest.Buffs;

public abstract class Buff
{
    public abstract bool Bad { get; set; }
}