namespace TheQuest;

public class Game
{
    public bool IsActive { get; set; }
    
    private World _world;
    private Player _player;
}