namespace TheQuest;

public abstract class Player : Entity {
    
    
}