namespace TheQuest.Weapons;

public abstract class Weapon
{
    public string Name { get; }
}